--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -91,5 +91,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.android.gms:play-services-gcm:8.3.0'
+    compile(project(':infobip-mobile-messaging-api-java'))
     compile project(':infobip-mobile-messaging-android-sdk')
 }
