MM-98 - receiving notifications when in background
* Added support for custom DataStores
* Not using provided dependencies on Aodroid projects

--- a/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
@@ -18,31 +18,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <receiver
-                android:name="com.google.android.gms.gcm.GcmReceiver"
+                android:name="org.infobip.mobile.messaging.gcm.MobileMessagingGcmReceiver"
                 android:exported="true"
                 android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name=".gcm" />
             </intent-filter>
         </receiver>
         <service
-                android:name="org.infobip.mobile.messaging.gcm.MobileMessagingGcmListenerService"
-                android:exported="false" >
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-            </intent-filter>
-        </service>
-        <service
-                android:name="org.infobip.mobile.messaging.gcm.MobileMessagingInstanceIDListenerService"
-                android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID" />
-            </intent-filter>
-        </service>
-        <service
                 android:name="org.infobip.mobile.messaging.gcm.RegistrationIntentService"
-                android:exported="false">
+                android:exported="true">
         </service>
         <activity
             android:name=".MainActivity"
