--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -33,15 +33,13 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "org.infobip.mobile.messaging.demo"
         minSdkVersion 14
         targetSdkVersion 23
-        versionName version
     }
 
-    compileOptions{
-        sourceCompatibility=JavaVersion.VERSION_1_7
-        targetCompatibility=JavaVersion.VERSION_1_7
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_7
+        targetCompatibility = JavaVersion.VERSION_1_7
     }
 
 
@@ -74,22 +72,26 @@ android {
         variant.outputs.each { output ->
             output.outputFile = new File(
                     output.outputFile.parent,
-                    output.outputFile.name.replace("release", (variant.versionName.contains("SNAPSHOT")?"dev":"release")+"-${variant.versionName}")
+                    output.outputFile.name.replace("release", (variant.versionName.contains("SNAPSHOT") ? "dev" : "release") + "-${variant.versionName}")
             )
         }
     }
 
     artifacts {
-        archives file("build/outputs/apk/infobip-mobile-messaging-android-demo-full-${version.contains('SNAPSHOT')?'dev':'release'}-${version}.apk")
+        archives file("build/outputs/apk/infobip-mobile-messaging-android-demo-full-${version.contains('SNAPSHOT') ? 'dev' : 'release'}-${version}.apk")
     }
 
     productFlavors {
-        full {
+        prod {
+            applicationId "org.infobip.mobile.messaging.demo"
             versionCode getStarDate()
+            versionName version
         }
 
-        less {
-            versionCode (getStarDate() - 1)
+        io {
+            applicationId "org.infobip.mobile.messaging.demo.io"
+            versionCode getStarDate()
+            versionName version
         }
     }
 }
