--- a/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <permission android:name="com.hmkcode.android.gcm.permission.C2D_MESSAGE"
+    <permission android:name=".permission.C2D_MESSAGE"
                 android:protectionLevel="signature" />
-    <uses-permission android:name="com.hmkcode.android.gcm.permission.C2D_MESSAGE" />
+    <uses-permission android:name=".permission.C2D_MESSAGE" />
 
 
     <application
