--- a/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
@@ -1,47 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.infobip.mobile.messaging.demo" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="org.infobip.mobile.messaging.demo">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
 
-    <permission android:name=".permission.C2D_MESSAGE"
-                android:protectionLevel="signature" />
-    <uses-permission android:name=".permission.C2D_MESSAGE" />
+    <permission
+            android:name=".permission.C2D_MESSAGE"
+            android:protectionLevel="signature"/>
 
+    <uses-permission android:name=".permission.C2D_MESSAGE"/>
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
         <receiver
                 android:name="org.infobip.mobile.messaging.gcm.MobileMessagingGcmReceiver"
                 android:exported="true"
-                android:permission="com.google.android.c2dm.permission.SEND" >
+                android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
             </intent-filter>
         </receiver>
+
         <service
                 android:name="org.infobip.mobile.messaging.gcm.RegistrationIntentService"
                 android:exported="true">
         </service>
+
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+                android:name=".MainActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+                android:name=".InspectActivity"
+                android:label="@string/title_activity_inspect"
+                android:parentActivityName=".MainActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="org.infobip.mobile.messaging.demo.MainActivity"/>
+        </activity>
+
         <meta-data
                 android:name="io.fabric.ApiKey"
                 android:value="49d13685e8fd8b049bbbc76d82a2b3703eaee734"
         />
     </application>
-
 </manifest>
