MM-128 - Uses upsert method for creating and updating registrations

--- a/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
                 android:parentActivityName=".MainActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value="org.infobip.mobile.messaging.demo.MainActivity"/>
+                    android:value=".MainActivity"/>
         </activity>
 
         <meta-data
