MM-128 - Pushing intents to global receivers
* Reporting API errors to Crashlytics

--- a/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
@@ -28,6 +28,13 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:exported="true"
+                  android:name="org.infobip.mobile.messaging.demo.ApiExceptionReceiver">
+            <intent-filter>
+                <action android:name="org.infobip.mobile.messaging.infobip.API_COMMUNICATION_ERROR"/>
+            </intent-filter>
+        </receiver>
+
         <service
                 android:name="org.infobip.mobile.messaging.gcm.RegistrationIntentService"
                 android:exported="true">
