--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -30,21 +30,19 @@ android {
         abortOnError false
     }
 
-    compileOptions{
-        sourceCompatibility=JavaVersion.VERSION_1_7
-        targetCompatibility=JavaVersion.VERSION_1_7
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
 dependencies {
-    compile(project(':infobip-mobile-messaging-api-java'))
-
+    compile project(':infobip-mobile-messaging-api-java')
     androidTestCompile 'com.crittercism.dexmaker:dexmaker-dx:1.4'
     androidTestCompile 'com.crittercism.dexmaker:dexmaker:1.4'
     androidTestCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
     androidTestCompile 'org.mockito:mockito-core:1.10.19'
-
-    compile group: 'com.google.android.gms', name: 'play-services', version: '8.4.0'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
 
 android.libraryVariants.all { variant ->
