MM-127 - Readme MD moved and modified
* Refactored some configuration stuff
* Added documentation for main classes and methods
* Not using long running processes nor AsyncTasks in MobileMessagingGcmReceiver

--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -44,6 +44,25 @@ sourceSets {
     test { compileClasspath += configurations.provided }
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+javadoc {
+    failOnError = false
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
 idea {
     module {
         try {
