--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -77,6 +77,7 @@ bintray {
     pkg {
         repo = 'maven'
         name = project.name
+        userOrg = 'infobip'
         vcsUrl = "http://git.infobip.local/projects/MML/repos/infobip-mobile-messaging-android/browse"
         licenses = ['Apache-2.0']
         labels = ['aar', 'android']
