--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -95,7 +95,7 @@ bintray {
     pkg {
         repo = 'maven'
         name = 'infobip-mobile-messaging-api-java'
-        userOrg = user
+        userOrg = 'infobip'
         licenses = ['Apache-2.0']
         vcsUrl = "http://git.infobip.local/projects/MML/repos/infobip-mobile-messaging-android/browse"
     }
