MM-371 - Basic auth

--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -20,6 +20,7 @@ shadowJar {
     classifier = 'shaded'
     zip64 = true
     relocate('com.google.gson', 'org.infobip.mobile.messaging.api.shaded.google.gson')
+    relocate('org.apache.commons.codec', 'org.infobip.mobile.messaging.api.shaded.apache.commons.codec')
     manifest {
         attributes("Implementation-Title": "Gradle", "Implementation-Version": version)
     }
@@ -80,6 +81,7 @@ idea {
 
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
 
     provided group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
 
