MM-524 - Gradle script refactoring

--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,8 @@ task updateVersionInReadme << {
     }
 }
 
+afterReleaseBuild.dependsOn updateVersionInReadme
+
 release {
-    buildTasks = ['clean', 'build', 'updateVersionInReadme', 'bintrayUpload']
+    buildTasks = ['clean', 'build', 'bintrayUpload']
 }
