--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'org.skyscreamer:jsonassert:1.3.0'
     androidTestCompile 'com.nanohttpd:nanohttpd:2.1.0'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'junit:junit:4.12'
 }
 
 android.libraryVariants.all { variant ->
