initial, wip, tests needed

--- a/infobip-mobile-messaging-android-sdk/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-sdk/src/main/AndroidManifest.xml
@@ -44,5 +44,8 @@
         </receiver>
 
         <receiver android:name="org.infobip.mobile.messaging.geo.GeofencingAlarmReceiver"/>
+
+        <activity android:name=".notification.DefaultNotificationTapActivity"
+            android:theme="@android:style/Theme.NoDisplay"/>
     </application>
 </manifest>
