MM-1292 - Added broadcast receiver for tap handling

--- a/infobip-mobile-messaging-android-sdk/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-sdk/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
 
         <receiver android:name="org.infobip.mobile.messaging.geo.GeofencingAlarmReceiver"/>
 
-        <activity android:name=".notification.DefaultNotificationTapActivity"
-            android:theme="@android:style/Theme.NoDisplay"/>
+        <receiver android:name="org.infobip.mobile.messaging.notification.NotificationTapReceiver"/>
+
     </application>
 </manifest>
