--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -23,7 +23,7 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName project.version
-        testInstrumentationRunner 'org.infobip.mobile.messaging.CustomInstrumentationTestRunner'
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     lintOptions {
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:9.0.1'
     compile 'com.android.support:support-v4:25.0.1'
 
+    androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.crittercism.dexmaker:dexmaker-dx:1.4'
     androidTestCompile 'com.crittercism.dexmaker:dexmaker:1.4'
     androidTestCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
