--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -101,6 +101,6 @@ bintray {
         name = 'infobip-mobile-messaging-api-java'
         userOrg = 'infobip'
         licenses = ['Apache-2.0']
-        vcsUrl = "http://git.infobip.local/projects/MML/repos/infobip-mobile-messaging-android/browse"
+        vcsUrl = "https://git.ib-ci.com/projects/MML/repos/infobip-mobile-messaging-android/browse"
     }
 }
