Location permission moved to geo SDK lib manifest

--- a/infobip-mobile-messaging-android-geo-sdk/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-geo-sdk/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-    package="com.infobip.mobile.messaging.geo">
+    package="org.infobip.mobile.messaging.geo">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application>
 
