--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -45,6 +45,7 @@ android {
 dependencies {
     compile project(':infobip-mobile-messaging-api-java')
     compile 'com.google.android.gms:play-services-gcm:9.0.1'
+    compile 'com.google.android.gms:play-services-location:9.0.1'
     compile 'com.android.support:support-v4:25.3.0'
 
     androidTestCompile project(':infobip-mobile-messaging-android-test')
