--- a/infobip-mobile-messaging-android-geo-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-geo-sdk/build.gradle
@@ -53,8 +53,14 @@ android {
 dependencies {
     compile project(':infobip-mobile-messaging-android-sdk')
     compile project(':infobip-mobile-messaging-api-java')
+    compile 'com.android.support:support-v4:25.3.0'
 
     androidTestCompile project(':infobip-mobile-messaging-android-test')
+    androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestCompile 'com.nanohttpd:nanohttpd:2.1.0'
+    androidTestCompile 'org.skyscreamer:jsonassert:1.3.0'
+
     testCompile project(':infobip-mobile-messaging-android-test')
 }
 
