--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.0'
 
     androidTestCompile project(':infobip-mobile-messaging-android-test')
+    androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestCompile 'com.nanohttpd:nanohttpd:2.1.0'
+
     testCompile project(':infobip-mobile-messaging-android-test')
 }
 
