--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'org.mockito:mockito-core:1.10.19'
     androidTestCompile 'com.nanohttpd:nanohttpd:2.1.0'
+    androidTestCompile 'org.skyscreamer:jsonassert:1.3.0'
 
     testCompile project(':infobip-mobile-messaging-android-test')
 }
