MM-2152 - Catching and hiding firebase message event

--- a/infobip-mobile-messaging-android-sdk/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-sdk/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
 
         <service
             android:name="org.infobip.mobile.messaging.gcm.MobileMessagingGcmIntentService"
-            android:exported="false" />
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
 
         <service
             android:name="org.infobip.mobile.messaging.gcm.MobileMessagingInstanceIDListenerService"
