MM-2152 - Enabled release on any branch

--- a/build.gradle
+++ b/build.gradle
@@ -89,4 +89,8 @@ afterReleaseBuild.dependsOn updateVersionInReadme
 
 release {
     buildTasks = ['clean', 'build', 'bintrayUpload']
+    git {
+        requireBranch = ''
+        pushToRemote = 'origin'
+    }
 }
