--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     testCompile 'org.assertj:assertj-core:2.3.0'
     testCompile 'com.nanohttpd:nanohttpd:2.1.0'
     testCompile 'org.skyscreamer:jsonassert:1.3.0'
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
 
 bintray {
