MM-2903 - Explicitly stating tasks for pom modification

--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -129,4 +129,5 @@ task modifyPomBeforeUpload << {
     //noinspection UnnecessaryQualifiedReference
     groovy.xml.XmlUtil.serialize(project, new FileWriter(pom))
 }
-uploadArchives.finalizedBy(modifyPomBeforeUpload)
+artifactoryPublish.dependsOn(modifyPomBeforeUpload)
+bintrayUpload.dependsOn(modifyPomBeforeUpload)
