--- a/infobip-mobile-messaging-android-geo-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-geo-sdk/build.gradle
@@ -1,9 +1,13 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
@@ -45,26 +49,34 @@ android {
 }
 
 dependencies {
-    compile project(":infobip-mobile-messaging-android-sdk")
-    compile project(":infobip-mobile-messaging-api-java")
-    compile "com.android.support:support-v4:${mm_supportLibrariesVersion}"
+    implementation project(":infobip-mobile-messaging-android-sdk")
+    implementation project(":infobip-mobile-messaging-api-java")
+    implementation "com.android.support:support-v4:${mm_supportLibrariesVersion}"
 
-    androidTestCompile project(":infobip-mobile-messaging-android-test")
-    androidTestCompile "junit:junit:4.12"
-    androidTestCompile "org.mockito:mockito-core:1.10.19"
-    androidTestCompile "com.nanohttpd:nanohttpd:2.1.0"
-    androidTestCompile("org.skyscreamer:jsonassert:1.3.0") {
+    androidTestImplementation project(":infobip-mobile-messaging-android-test")
+    androidTestImplementation "junit:junit:4.12"
+    androidTestImplementation "org.mockito:mockito-core:1.10.19"
+    androidTestImplementation 'com.nanohttpd:nanohttpd:2.1.0'
+    androidTestImplementation('org.skyscreamer:jsonassert:1.5.0') {
         exclude group: "org.json", module: "json"
     }
 
-    testCompile project(":infobip-mobile-messaging-android-test")
+    testImplementation project(":infobip-mobile-messaging-android-test")
 }
 
 android.libraryVariants.all { variant ->
     def name = variant.buildType.name
     def jar = project.tasks.create(name: "jar${name.capitalize()}", type: Jar) {
-        dependsOn variant.javaCompiler
-        from variant.javaCompiler.destinationDir
+        Task javaCompileTask
+        if (variant.hasProperty('javaCompileProvider')) {
+            // Android 3.3.0+
+            javaCompileTask = variant.javaCompileProvider.get()
+        } else {
+            javaCompileTask = variant.javaCompile
+        }
+
+        dependsOn javaCompileTask
+        from javaCompileTask.destinationDir
 
         manifest {
             attributes(
@@ -101,7 +113,7 @@ bintray {
 }
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
+    archiveClassifier.set('sources')
 }
 
 task javadoc(type: Javadoc) {
@@ -111,7 +123,7 @@ task javadoc(type: Javadoc) {
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc')
     from javadoc.destinationDir
 }
 
