--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -1,9 +1,13 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
@@ -38,30 +42,40 @@ android {
 }
 
 dependencies {
-    compile project(":infobip-mobile-messaging-api-java")
-    compile project(":infobip-mobile-messaging-android-resources")
-    compile "com.google.firebase:firebase-messaging:${mm_firebaseMessagingVersion}"
-    provided "com.google.android.gms:play-services-gcm:${mm_gcmVersion}"
-    compile "com.google.android.gms:play-services-location:${mm_gmsLocationVersion}"
-    compile "com.android.support:support-v4:${mm_supportLibrariesVersion}"
-    compile "com.android.support:appcompat-v7:${mm_supportLibrariesVersion}"
+    api project(":infobip-mobile-messaging-api-java")
+    api project(":infobip-mobile-messaging-android-resources")
+    api "com.google.firebase:firebase-messaging:${mm_firebaseMessagingVersion}"
+    api "com.google.android.gms:play-services-gcm:${mm_gcmVersion}"
+    api "com.google.android.gms:play-services-location:${mm_gmsLocationVersion}"
+    api "com.android.support:support-v4:${mm_supportLibrariesVersion}"
+    api "com.android.support:appcompat-v7:${mm_supportLibrariesVersion}"
 
-    androidTestCompile project(":infobip-mobile-messaging-android-test")
-    androidTestCompile "junit:junit:4.12"
-    androidTestCompile "org.mockito:mockito-core:1.10.19"
-    androidTestCompile "com.nanohttpd:nanohttpd:2.1.0"
-    androidTestCompile("org.skyscreamer:jsonassert:1.3.0") {
+    androidTestImplementation project(":infobip-mobile-messaging-android-test")
+    androidTestImplementation "com.android.support.test:runner:1.0.2"
+    androidTestImplementation "junit:junit:4.12"
+    androidTestImplementation "org.mockito:mockito-core:1.10.19"
+    androidTestImplementation 'com.nanohttpd:nanohttpd:2.1.0'
+    androidTestImplementation('org.skyscreamer:jsonassert:1.5.0') {
         exclude group: "org.json", module: "json"
     }
 
-    testCompile project(":infobip-mobile-messaging-android-test")
+    testImplementation project(":infobip-mobile-messaging-android-test")
+    testImplementation "junit:junit:4.12"
 }
 
 android.libraryVariants.all { variant ->
     def name = variant.buildType.name
     def jar = project.tasks.create(name: "jar${name.capitalize()}", type: Jar) {
-        dependsOn variant.javaCompiler
-        from variant.javaCompiler.destinationDir
+        Task javaCompileTask
+        if (variant.hasProperty('javaCompileProvider')) {
+            // Android 3.3.0+
+            javaCompileTask = variant.javaCompileProvider.get()
+        } else {
+            javaCompileTask = variant.javaCompile
+        }
+
+        dependsOn javaCompileTask
+        from javaCompileTask.destinationDir
 
         manifest {
             attributes(
@@ -99,7 +113,7 @@ bintray {
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
+    archiveClassifier.set('sources')
 }
 
 task javadoc(type: Javadoc) {
@@ -109,7 +123,7 @@ task javadoc(type: Javadoc) {
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc')
     from javadoc.destinationDir
 }
 
@@ -120,15 +134,17 @@ artifacts {
 
 // Remove this when Gradle bug is fixed.
 // https://github.com/gradle/gradle/issues/3170
-task modifyPomBeforeUpload << {
-    def pom = "${project.projectDir}/build/poms/pom-default.xml"
-    def project = new XmlParser().parse(pom)
-    project.dependencies
-            .dependency
-            .find { dependency -> dependency.artifactId[0].text() == 'infobip-mobile-messaging-android-resources' }
-            .appendNode('type', 'aar')
-    //noinspection UnnecessaryQualifiedReference
-    groovy.xml.XmlUtil.serialize(project, new FileWriter(pom))
+task modifyPomBeforeUpload {
+    doLast {
+        def pom = "${project.projectDir}/build/poms/pom-default.xml"
+        def project = new XmlParser().parse(pom)
+        project.dependencies
+                .dependency
+                .find { dependency -> dependency.artifactId[0].text() == 'infobip-mobile-messaging-android-resources' }
+                .appendNode('type', 'aar')
+        //noinspection UnnecessaryQualifiedReference
+        groovy.xml.XmlUtil.serialize(project, new FileWriter(pom))
+    }
 }
 artifactoryPublish.dependsOn(modifyPomBeforeUpload)
 bintrayUpload.dependsOn(modifyPomBeforeUpload)
