--- a/infobip-mobile-messaging-android-test/build.gradle
+++ b/infobip-mobile-messaging-android-test/build.gradle
@@ -25,26 +25,34 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: "libs", include: ["*.jar"])
+    implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    compile "com.google.code.gson:gson:2.8.2"
+    implementation 'com.google.code.gson:gson:2.8.5'
 
-    compile "com.android.support.test:runner:1.0.2"
-    compile "com.crittercism.dexmaker:dexmaker-dx:1.4"
-    compile "com.crittercism.dexmaker:dexmaker:1.4"
-    compile "com.crittercism.dexmaker:dexmaker-mockito:1.4"
-    compile "org.mockito:mockito-core:1.10.19"
-    compile "junit:junit:4.12"
-    compile "com.nanohttpd:nanohttpd:2.1.0"
-    compile("org.skyscreamer:jsonassert:1.3.0") {
+    implementation "com.android.support.test:runner:1.0.2"
+    implementation "com.crittercism.dexmaker:dexmaker-dx:1.4"
+    implementation "com.crittercism.dexmaker:dexmaker:1.4"
+    implementation "com.crittercism.dexmaker:dexmaker-mockito:1.4"
+    implementation "org.mockito:mockito-core:1.10.19"
+    implementation "junit:junit:4.12"
+    implementation 'com.nanohttpd:nanohttpd:2.1.0'
+    api('org.skyscreamer:jsonassert:1.5.0') {
         exclude group: "org.json", module: "json"
     }
 }
 android.libraryVariants.all { variant ->
     def name = variant.buildType.name
     def jar = project.tasks.create(name: "jar${name.capitalize()}", type: Jar) {
-        dependsOn variant.javaCompiler
-        from variant.javaCompiler.destinationDir
+        Task javaCompileTask
+        if (variant.hasProperty('javaCompileProvider')) {
+            // Android 3.3.0+
+            javaCompileTask = variant.javaCompileProvider.get()
+        } else {
+            javaCompileTask = variant.javaCompile
+        }
+
+        dependsOn javaCompileTask
+        from javaCompileTask.destinationDir
 
         manifest {
             attributes(
@@ -67,7 +75,7 @@ android.libraryVariants.all { variant ->
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
+    archiveClassifier.set('sources')
 }
 
 task javadoc(type: Javadoc) {
@@ -77,7 +85,7 @@ task javadoc(type: Javadoc) {
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc')
     from javadoc.destinationDir
 }
 
