--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -1,14 +1,15 @@
 buildscript {
     dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
 
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '1.2.3'
+    id 'com.github.johnrengelman.shadow' version '2.0.4'
     id 'maven'
     id 'idea'
+    id 'io.freefair.lombok' version '4.1.0'
 }
 
 apply plugin: 'com.jfrog.bintray'
@@ -17,7 +18,7 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 shadowJar {
-    classifier = 'shaded'
+    archiveClassifier.set('shaded')
     zip64 = true
     relocate('com.google.gson', 'org.infobip.mobile.messaging.api.shaded.google.gson')
     manifest {
@@ -45,7 +46,7 @@ sourceSets {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier.set('sources')
     from sourceSets.main.allSource
 }
 
@@ -54,7 +55,7 @@ javadoc {
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc')
     from javadoc.destinationDir
 }
 
@@ -79,15 +80,14 @@ idea {
 }
 
 dependencies {
-    compile "com.google.code.gson:gson:2.8.2"
+    compile "com.google.code.gson:gson:2.8.5"
+    implementation "commons-codec:commons-codec:1.10"
 
-    provided "org.projectlombok:lombok:1.16.10"
-
-    testCompile "junit:junit:4.12"
-    testCompile "org.assertj:assertj-core:2.3.0"
-    testCompile "com.nanohttpd:nanohttpd:2.1.0"
-    testCompile "org.skyscreamer:jsonassert:1.3.0"
-    testCompile "org.mockito:mockito-core:1.10.19"
+    testImplementation "junit:junit:4.12"
+    testImplementation "org.assertj:assertj-core:2.3.0"
+    testImplementation "com.nanohttpd:nanohttpd:2.1.0"
+    testImplementation "org.skyscreamer:jsonassert:1.5.0"
+    testImplementation "org.mockito:mockito-core:1.10.19"
 }
 
 bintray {
