--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -89,6 +89,6 @@ dependencies {
     implementation "com.android.support:support-v4:${mm_supportLibrariesVersion}"
 }
 
-private String property(Project project, String projectKey, String environmentKey) {
+private static String property(Project project, String projectKey, String environmentKey) {
     return project.hasProperty(projectKey) ? project[projectKey] : System.getenv(environmentKey)
 }
