--- a/infobip-mobile-messaging-android-demo/src/chat/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.infobip.mobile.messaging.demo">
-
+    <uses-permission android:name="android.permission.CAMERA" />
     <application>
 
         <activity
