--- a/infobip-mobile-messaging-android-chat-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-chat-sdk/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation "com.android.support:support-v4:${mm_supportLibrariesVersion}"
     implementation "com.android.support:appcompat-v7:${mm_supportLibrariesVersion}"
     implementation "com.android.support:design:${mm_supportLibrariesVersion}"
+    implementation 'androidx.exifinterface:exifinterface:1.1.0'
 
     androidTestImplementation project(":infobip-mobile-messaging-android-test")
     androidTestImplementation "com.android.support.test:runner:1.0.2"
