--- a/infobip-mobile-messaging-android-demo/src/chat/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.infobip.mobile.messaging.demo">
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application>
 
         <activity
