--- a/infobip-mobile-messaging-android-chat-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-chat-sdk/build.gradle
@@ -54,8 +54,7 @@ dependencies {
     implementation project(":infobip-mobile-messaging-api-java")
     implementation "com.android.support:support-v4:${mm_supportLibrariesVersion}"
     implementation "com.android.support:appcompat-v7:${mm_supportLibrariesVersion}"
-    implementation "com.android.support:design:${mm_supportLibrariesVersion}"
-    implementation 'androidx.exifinterface:exifinterface:1.1.0'
+    implementation "com.android.support:exifinterface:${mm_supportLibrariesVersion}"
 
     androidTestImplementation project(":infobip-mobile-messaging-android-test")
     androidTestImplementation "com.android.support.test:runner:1.0.2"
