--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -19,6 +19,7 @@ android {
         versionName version
         applicationId "org.infobip.mobile.messaging.demo"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders.applicationClass = "Application"
     }
 
     compileOptions {
@@ -71,6 +72,11 @@ android {
 
         web {
             dimension "default"
+        }
+
+        customInApp {
+            dimension "default"
+            manifestPlaceholders.applicationClass = "InAppApplication"
         }
     }
 }
