--- a/infobip-mobile-messaging-android-demo/src/customInApp/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/customInApp/AndroidManifest.xml
@@ -1,7 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.infobip.mobile.messaging.demo">
 
-    <application>
+    <application
+        tools:replace="android:name"
+        android:allowBackup="false"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        android:name="org.infobip.mobile.messaging.demo.InAppApplication"
+        >
         <receiver
             android:name=".InAppReceiver"
             android:exported="false">
